Worked on backend files, created the other html files

--- a/public/index-2.html
+++ b/public/index-2.html
@@ -1,5 +1,5 @@
 
-<!-- initial quote filled out by builder and sent to lumber yard -->
+<!-- This is the requested quote fulfilled, sent by the lumberyard back to the builder. -->
 
 <!DOCTYPE html>
 <html ng-app="MyApp">
