--- a/public/index-3.html
+++ b/public/index-3.html
@@ -1,5 +1,5 @@
 
-<!-- initial quote filled out by builder and sent to lumber yard -->
+<!-- Builder sends back the quote to the lumber yard, by either hitting the "Order Now!" button (to place the order), or the "Send Revision" button (to send a new version of the quote). -->
 
 <!DOCTYPE html>
 <html ng-app="MyApp">
