--- a/public/index.html
+++ b/public/index.html
@@ -321,7 +321,7 @@
                 </table>
             </div>
             <div class="get-quote">
-                <button ng-click="" type="button" class="my-btn">Get Quote!</button>
+                <button ng-click="" type="button" class="my-btn"><a href="csjohnson79@icloud.com">Get Quote!</a></button>
             </div>
         </section>
     </body>
