--- a/public/index-4.html
+++ b/public/index-4.html
@@ -1,5 +1,5 @@
 
-<!-- initial quote filled out by builder and sent to lumber yard -->
+<!-- The lumber yard receives this as an order confirmation (a non-writeable document, or PDF!) -->
 
 <!DOCTYPE html>
 <html ng-app="MyApp">
