--- a/public/index-3.html
+++ b/public/index-3.html
@@ -5,7 +5,7 @@
 <html ng-app="MyApp">
     <head>
         <meta charset="utf-8">
-        <title>Mid-Term Project</title>
+        <title>Final Project</title>
                 <!--style.css-->
         <link rel="stylesheet" type="text/css" href="css/style.css">
                 <!--normalize.css-->
@@ -321,7 +321,8 @@
                 </table>
             </div>
             <div class="get-quote">
-                <button ng-click="" type="button" class="my-btn">Get Quote!</button>
+                <button ng-click="" type="button" class="my-btn">Place Order!</button>
+                <button ng-click="" type="button" class="my-btn">Get Revised Quote</button>
             </div>
         </section>
     </body>
