--- a/public/index-4.html
+++ b/public/index-4.html
@@ -5,7 +5,7 @@
 <html ng-app="MyApp">
     <head>
         <meta charset="utf-8">
-        <title>Mid-Term Project</title>
+        <title>Final Project</title>
                 <!--style.css-->
         <link rel="stylesheet" type="text/css" href="css/style.css">
                 <!--normalize.css-->
