--- a/public/register.html
+++ b/public/register.html
@@ -1,5 +1,5 @@
 
-<!-- log-in html page -->
+<!-- register html page -->
 
 <!DOCTYPE html>
 <html>
@@ -21,17 +21,17 @@
     <body>
         <!-- Buttons each trigger a modal -->
         <div class="buttons">
-            <div class="logbox">
+            <!-- <div class="logbox">
                 <button type="button" class="btn btn-lg logbtn" data-toggle="modal" data-target="#myModal-1">"LOG" In!</button>
-                <p><a href="#">Not Registered?</a></p>
-            </div>
-            <!-- <div class="regbox">
-                <button type="button" class="btn btn-lg regbtn" data-toggle="modal" data-target="#myModal-2">Register </button>
             </div> -->
+            <div class="regbox">
+                <button type="button" class="btn btn-lg regbtn" data-toggle="modal" data-target="#myModal-2">Register </button>
+                <p><a href="#">Back</a></p>
+            </div>
         </div>
 
         <!-- Modal #1 -->
-        <div class="modal fade" id="myModal-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <!-- <div class="modal fade" id="myModal-1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
@@ -40,6 +40,32 @@
               </div>
               <div class="modal-body">
                   <h1>Please Log in to your account to get started on your quote</h1>
+                  <form class="" action="index.html" method="post">
+                      <label for="">E-mail Address</label>
+                      <input type="text" name="email-address" value="">
+                      <label for="">Password</label>
+                      <input type="text" name="password" value="">
+                      <button type="submit" name="log-in">Log-In</button>
+                  </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div> -->
+
+        <!-- Modal #2 -->
+        <div class="modal fade" id="myModal-2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+              </div>
+              <div class="modal-body">
+                  <h1>Register here to create an account!</h1>
                   <form class="" action="index.html" method="post">
                       <label for="">E-mail Address</label>
                       <input type="text" name="email-address" value="">
@@ -56,31 +82,5 @@
             </div>
           </div>
         </div>
-
-        <!-- Modal #2 -->
-        <!-- <div class="modal fade" id="myModal-2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-          <div class="modal-dialog" role="document">
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-              </div>
-              <div class="modal-body">
-                  <h1>Register here to create an account!</h1>
-                  <form class="" action="index.html" method="post">
-                      <label for="">E-mail Address</label>
-                      <input type="text" name="email-address" value="">
-                      <label for="">Password</label>
-                      <input type="text" name="password" value="">
-                      <button type="submit" name="log-in">Log-In</button>
-                  </form>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
-              </div>
-            </div>
-          </div>
-        </div> -->
     </body>
 </html>
