made changes to log-n.html and register.html

--- a/public/log-in.html
+++ b/public/log-in.html
@@ -5,7 +5,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Log-in Page</title>
+        <title>Log In</title>
         <!--css/log-in.css-->
         <link rel="stylesheet" href="css/log-in.css">
         <!-- <link rel="stylesheet" href="css/bootstrap.css"> -->
@@ -23,7 +23,7 @@
         <div class="buttons">
             <div class="logbox">
                 <button type="button" class="btn btn-lg logbtn" data-toggle="modal" data-target="#myModal-1">"LOG" In!</button>
-                <p><a href="#">Not Registered?</a></p>
+                <p class="text"><a href="register.html">Not Registered?</a></p>
             </div>
             <!-- <div class="regbox">
                 <button type="button" class="btn btn-lg regbtn" data-toggle="modal" data-target="#myModal-2">Register </button>
@@ -36,10 +36,10 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                <h4 class="modal-title" id="myModalLabel">Please Log in to your account to get started on your quote!</h4>
               </div>
               <div class="modal-body">
-                  <h1>Please Log in to your account to get started on your quote</h1>
+                  <!-- <h1></h1> -->
                   <form class="" action="index.html" method="post">
                       <label for="">E-mail Address</label>
                       <input type="text" name="email-address" value="">
