linked up html pages, changed buttons, added basic email functionality to GET QUOTE button

--- a/public/index.html
+++ b/public/index.html
@@ -321,7 +321,7 @@
                 </table>
             </div>
             <div class="get-quote">
-                <button ng-click="" type="button" class="my-btn"><a href="csjohnson79@icloud.com">Get Quote!</a></button>
+                <a href="mailto:csjohnson79@icloud.com"><button ng-click="" type="submit" class="my-btn">Get Quote!</button></a>
             </div>
         </section>
     </body>
