Got Authentication working, backend routes figured out, install dotenv node module

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -30,6 +30,7 @@
         <nav>
             <div>
                 <img class="top-pic" src="images/black-cabin.png">
+                <a href="/logout" class="btn btn-lg btn-danger">Logout</a>
             </div>
         </nav>
 
