added angular email controller

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -322,7 +322,7 @@
                 </table>
             </div>
             <div class="get-quote">
-                <a href="mailto:csjohnson79@icloud.com"><button ng-click="" type="submit" class="my-btn">Get Quote!</button></a>
+                <button ng-click="" type="submit" class="my-btn">Get Quote!</button>
             </div>
         </section>
     </body>
