added email functionalitygit add -A

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -21,6 +21,8 @@
                 <!--.js files-->
         <script src="js/module.js" type="text/javascript"></script>
         <script src="js/main.controller.js" type="text/javascript"></script>
+        <script src="js/email.ang.controller.js" type="text/javascript"></script>
+
         <script src="js/app.js" type="text/javascript"></script>
     </head>
 
@@ -321,8 +323,8 @@
                     </tr>
                 </table>
             </div>
-            <div class="get-quote">
-                <button ng-click="" type="submit" class="my-btn">Get Quote!</button>
+            <div ng-controller="ECtrl as eCtrl" class="get-quote">
+                <button ng-click="eCtrl.submit()" type="submit" class="my-btn">Get Quote!</button>
             </div>
         </section>
     </body>
