updated button at bottom...

--- a/public/register.html
+++ b/public/register.html
@@ -71,13 +71,12 @@
                       <input type="text" name="email-address" value="">
                       <label for="">Password</label>
                       <input type="text" name="password" value="">
-                      <button type="submit" name="log-in">Register</button>
                       <!-- what goes here for 'forgot email or password? -->
                   </form>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <a href="index.html"><button type="button" class="btn btn-primary">Register</button></a>
               </div>
             </div>
           </div>
