updated, connected with quote database schema, ng-model binded with html

--- a/public/html/email.html
+++ b/public/html/email.html
@@ -188,7 +188,7 @@
                                                                         <tbody>
                                                                             <tr>
                                                                                 <td align="center" style="border-radius: 3px;" bgcolor="#256F9C"><a href="" target="" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 1px solid #256F9C; display: inline-block;"
-                                                                                        class="mobile-button">Learn More →</a></td>
+                                                                                        class="mobile-button">Click here for quote</a></td>
                                                                             </tr>
                                                                         </tbody>
                                                                     </table>
@@ -226,10 +226,10 @@
                                     <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                         <tbody>
                                             <tr>
-                                                <td align="center" style="font-size: 25px; font-family: Helvetica, Arial, sans-serif; color: #333333;" class="padding">Email the quote back to your customer and he will let you know how everything looks!!</td>
+                                                <td align="center" style="font-size: 25px; font-family: Helvetica, Arial, sans-serif; color: #333333;" class="padding">Quote your customer a price, lead time, and any other important details, then send the quote back to them so they can get everything dialed in and get prepared to order from you!!</td>
                                             </tr>
                                             <tr>
-                                                <td align="center" style="padding: 20px 0 20px 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</td>
+                                                <td align="center" style="padding: 20px 0 20px 0; font-size: 16px; line-height: 25px; font-family: Helvetica, Arial, sans-serif; color: #666666;" class="padding"></td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -239,3 +239,7 @@
 </body>
 
 </html>
+
+
+<!-- <a href="" target="" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 1px solid #256F9C; display: inline-block;"
+        class="mobile-button">Learn More →</a> -->
