--- a/public/html/auth.html
+++ b/public/html/auth.html
@@ -4,6 +4,8 @@
         <title>Login</title>
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
         <link rel="stylesheet" href="/css/auth.css">
+        <!-- <link rel="stylesheet" href="/css/log-in.css"> -->
+        <!-- <link rel="stylesheet" href="/css/register.css"> -->
 
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
