redesigned login, port 80

--- a/public/html/email.html
+++ b/public/html/email.html
@@ -187,7 +187,7 @@
                                                                     <table border="0" cellspacing="0" cellpadding="0" class="mobile-button-container">
                                                                         <tbody>
                                                                             <tr>
-                                                                                <td align="center" style="border-radius: 3px;" bgcolor="#256F9C"><a href="" target="" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 1px solid #256F9C; display: inline-block;"
+                                                                                <td align="center" style="border-radius: 3px;" bgcolor="#256F9C"><a href="http://138.197.32.111/index" target="" style="font-size: 16px; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; color: #ffffff; text-decoration: none; border-radius: 3px; padding: 15px 25px; border: 1px solid #256F9C; display: inline-block;"
                                                                                         class="mobile-button">Click here for quote</a></td>
                                                                             </tr>
                                                                         </tbody>
