--- a/public/html/auth.html
+++ b/public/html/auth.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="/css/auth.css">
         <!-- <link rel="stylesheet" href="/css/log-in.css"> -->
         <!-- <link rel="stylesheet" href="/css/register.css"> -->
-
+        <link rel="stylesheet" href="css/log-in.css">
         <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -14,7 +14,7 @@
     </head>
     <body ng-controller="module.auth.controller as auth" class="container">
         <p class="text-center">
-            <a class="btn btn-default" href="/">Homepage</a>
+            <h1 class="appnameheader">LumberjaX</h1>
         </p>
         <section id="tabs">
             <!-- Nav tabs -->
@@ -45,7 +45,7 @@
                                 <input required placeholder="Password" class="form-control" type="password" ng-model="auth.payload.password"/>
                             </div>
                         </fieldset>
-                        <input class="btn btn-primary" type="submit" value="Login">
+                        <input class="log-btn" type="submit" value="Login">
                         <p ng-class="auth.login.alert">{{ auth.login.message }}</p>
                     </form>
                 </div>
@@ -66,7 +66,7 @@
                                 <input required placeholder="Create a password" class="form-control" type="password" ng-model="auth.payload.password"/>
                             </div>
                         </fieldset>
-                        <button class="btn btn-primary" type="submit">Register</button>
+                        <button class="reg-btn" type="submit">Register</button>
                         <p ng-class="auth.register.alert">{{ auth.register.message }}</p>
                     </form>
                 </div>
